fix: Resolve issue with navbar overlapping
- Resolve issue with navbar overlapping and causing issues due to the use of sticky-top.
- Apply padding to the `main` element to account for the height of the navbar, ensuring content is fully visible and not overlapped.
- Set `scroll-padding-top` on the `html` element to prevent the navbar from overlapping section titles when navigating to anchor links.
- Update comments.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html{
+    scroll-padding-top: 56px;
+    /*This stops the navbar overlapping due to the use of sticky-top*/
+}
+
 .icon-link i{
     font-size: 2rem;
 }
@@ -9,5 +14,7 @@
     vertical-align: top; /* Align image with the top of the container*/
     padding-right: 2%;
 }
+
+
 
 
